--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Highl1te/HighliteDesktop.git"
   },
   "license": "GPL-3.0-or-later",
-  "author": "KKonaOG",
+  "author": "Highlite Team",
   "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
