--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,13 @@ jobs:
         with:
           node-version: lts/*
 
-      - name: Electron Forge Action
-        uses: yinxulai/actions-electron-forge@0.05
+      - name: Build/release Electron app
+        uses: paneron/action-electron-builder@v1.8.1
         with:
+          # GitHub token, automatically provided to the action
+          # (No need to define this secret in the repo settings)
           github_token: ${{ secrets.github_token }}
-          package_root: .
-          script_name: publish
-          release: true
+
+          # If the commit is tagged with a version (e.g. "v1.0.0"),
+          # release the app after building
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
