--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: Build/release
 
 on:
   workflow_dispatch:
+  push:
 
 jobs:
   release:
@@ -32,4 +33,4 @@ jobs:
 
           # If the commit is tagged with a version (e.g. "v1.0.0"),
           # release the app after building
-          release: true
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
