Package.json fixes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "highlitedesktop",
+  "name": "HighliteDesktop",
   "productName": "HighLite",
   "version": "0.0.1",
   "description": "A RuneLite-esque Client for the game High Spell",
