--- a/package.json
+++ b/package.json
@@ -72,5 +72,6 @@
     "electron-log": "^5.4.0",
     "electron-squirrel-startup": "^1.0.1",
     "electron-updater": "^6.6.2"
-  }
+  },
+  "packageManager": "yarn@4.6.0"
 }
