--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     }
   },
   "devDependencies": {
-    "electron": "^36.2.1",
+    "electron": "36.3.1",
     "electron-builder": "^26.0.12"
   },
   "dependencies": {
