--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
+          
+      - name: Enable Corepack
+        run: corepack enable
 
       - name: Install Package Dependencies
         run: yarn install
