--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "HighliteDesktop",
   "productName": "HighLite",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A RuneLite-esque Client for the game High Spell",
   "homepage": "https://github.com/Highl1te/HighliteDesktop#readme",
   "bugs": {
@@ -71,7 +71,8 @@
   "dependencies": {
     "electron-log": "^5.4.0",
     "electron-squirrel-startup": "^1.0.1",
-    "electron-updater": "^6.6.2"
+    "electron-updater": "^6.6.2",
+    "keytar": "^7.9.0"
   },
   "packageManager": "yarn@4.9.1"
 }
