--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install Package Dependencies
         run: yarn install
 
+      - name: Build the app
+        run: yarn build
+
       - name: Build/release Electron app
         uses: paneron/action-electron-builder@v1.8.1
         with:
