--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -1,7 +1,11 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.web.json",
-  "include": ["src/renderer/**/*.ts", "src/preload/*.d.ts"],
+  "include": ["src/renderer/**/*.ts", "src/preload/*.d.ts", "src/types/*.d.ts"],
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@static/*": ["static/*"]
+    },
     "composite": true
   }
 }
