--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "Highlite Team",
   "main": "./out/main/index.js",
   "scripts": {
+    "dev": "electron-vite dev",
     "start": "electron-vite preview",
     "build": "electron-vite build",
     "build:unpack": "npm run build && electron-builder --dir",
@@ -86,6 +87,7 @@
     "electron": "^36.4.0",
     "electron-builder": "^25.1.8",
     "electron-vite": "^3.1.0",
+    "ts-simple-nameof": "^1.3.1",
     "typescript": "^5.8.3",
     "vite": "^6.2.6",
     "vite-plugin-electron": "^0.29.0"
