--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
-    "build:linux": "npm run build && electron-builder --linux"
+    "build:linux": "npm run build && electron-builder --linux",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,html}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,html}\"",
+    "format:fix": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,html}\" --ignore-unknown"
   },
   "build": {
     "appId": "com.highlite.desktop",
@@ -87,6 +90,7 @@
     "electron": "^36.4.0",
     "electron-builder": "^25.1.8",
     "electron-vite": "^3.1.0",
+    "prettier": "^3.6.2",
     "ts-simple-nameof": "^1.3.1",
     "typescript": "^5.8.3",
     "vite": "^6.2.6",
