Generate additional build varities for all systems (#88)
Co-authored-by: KKonaOG <kkonaog@fanet.dev>

--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
         {
           "target": "nsis",
           "arch": [
-            "x64"
+            "x64",
+            "arm64"
           ]
         }
       ],
@@ -71,12 +72,30 @@
         {
           "target": "AppImage",
           "arch": [
-            "x64"
+            "x64",
+            "arm64"
+          ]
+        },
+        {
+          "target": "flatpak",
+          "arch": [
+            "x64",
+            "arm64"
           ]
         }
       ],
       "icon": "build/icon.png"
     }
+  },
+  "nsis": {
+    "oneClick": false,
+    "allowToChangeInstallationDirectory": true,
+    "installerIcon": "build/icon.ico",
+    "uninstallerIcon": "build/icon.ico",
+    "uninstallDisplayName": "HighLite",
+    "createDesktopShortcut": true,
+    "createStartMenuShortcut": true,
+    "shortcutName": "HighLite"
   },
   "dependencies": {
     "@babylonjs/core": "^8.11.0",
